# WhatUSaidWhatWeDone

./: CHANGELOG.md  README.md  package-lock.json
Frontend/: .gitignore  App.vue  README.md  index.html  main.ts  metadata.json  package-lock.json  package.json  router.ts  tsconfig.json  types.ts  vite.config.ts
Frontend/components/: GeminiChat.vue  GraphFlow.vue  Header.vue  Hero.vue  TodoBoard.vue
Frontend/composables/: useAuth.ts  useGraphCreate.ts  useMyTodos.ts  useTodos.ts
Frontend/data/: todos.ts
Frontend/views/: Auth.vue  Board.vue  Graph.vue  GraphCreate.vue  Home.vue  Profile.vue
HelloWorld/backend/: .gitignore  README.md  config.py  requirements.txt  run.py
HelloWorld/backend/app/: __init__.py  errors.py
HelloWorld/backend/app/models/: user.py
HelloWorld/backend/app/routes/: auth.py  main.py
backend/: .env.example  .gitignore  pyproject.toml  wsgi.py
backend/app/: __init__.py  config.py
backend/app/commands/: __init__.py  db.py
backend/app/models/: __init__.py  edge.py  edge_type.py  graph.py  node.py  node_layout.py  refresh_token.py  todo.py  user.py
backend/app/routes/: __init__.py  auth.py  chat.py  graphs.py  todos.py
backend/app/service/: graphs.py
backend/migrations/versions/: 2c4b1e9a1d1a_bind_todos_user.py  6f4b2c7f2d2a_auth_tables.py  c1df6afbee18_init_tables.py
